# wwtp-energy-prediction

./: .dockerignore  .gitignore  Dockerfile  LICENSE  MANUSCRIPT.md  PAPER.md  README.md  docker-compose.yml  pyproject.toml
data/: 2022-wwt-data.xlsx  wwtp_data_final.csv  wwtp_data_simplified.csv  wwtp_data_standardized.csv  wwtp_summary_clean.csv  wwtp_summary_standardized.csv
data/outputs/analysis/: correlation_matrix.csv  data_distributions_stats.csv  data_types_report.csv  feature_statistics.csv  missing_values_report.csv  process_analysis.csv  processed_data.csv  raw_data_statistics.csv  target_correlations.csv
data/outputs/evaluation/: error_analysis.json  final_evaluation_predictions.csv  final_evaluation_report.json  model_comparison.csv  segment_evaluation.csv
data/outputs/models/: feature_names.json  model_comparison.csv  model_config.json  random_forest_feature_importance.csv  random_forest_predictions.csv  training_results.json
scripts/: analyze_data.py  analyze_process_types.py  clean_data.py  simplified_standardization.py  standardize_processes.py
src/: config.py  data_analysis.py  evaluate.py  gradio_app.py  model_train.py
src/data/: data_cleaner.py  data_loader.py
src/evaluation/: metrics.py
src/features/: __init__.py  feature_engineering.py
src/models/: model_trainer.py
src/utils/: model_persistence.py
src/visualization/: visualizer.py
