[project]
name = "wwt-prediction"
version = "0.1.0"
description = "Wastewater Treatment Plant Energy Consumption Prediction Model"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.5",
    "numpy>=2.2.6",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.1",
    "xgboost>=3.0.4",
    "seaborn>=0.13.0",
    "joblib>=1.3.0",
    "statsmodels>=0.14.5",
]

[project.scripts]
data-analysis = "src.data_analysis:main"
model-train = "src.model_train:main"
evaluate = "src.evaluate:main"
